--- a/prometheus/prometheus/prometheus.yml
+++ b/prometheus/prometheus/prometheus.yml
@@ -20,10 +20,23 @@ rule_files:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
 
-  - job_name: "prometheus"
-
+  - job_name: 'vault'
+    scrape_interval: 30s
+    metrics_path: "/v1/sys/metrics"
+    params:
+      format: ['prometheus']
+    scheme: https
+    tls_config:
+      ca_file: /etc/certs/root.crt
+    authorization:
+      credentials_file: "/etc/certs/vault-token.txt"
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ['data-encryption.104dc-dev.com']
+
+  # - job_name: "prometheus"
+
+  #   static_configs:
+  #     - targets: ["localhost:9090"]
 
   # - job_name: "cadvisor-dev"
 
@@ -32,8 +45,8 @@ scrape_configs:
   #   static_configs:
   #     - targets: ["172.24.0.141:8080"]
 
-  - job_name: "cadvisor-stg"
-    scrape_interval: 30s
+  # - job_name: "cadvisor-stg"
+  #   scrape_interval: 30s
 
-    static_configs:
-      - targets: ["host.docker.internal:8080"]
+  #   static_configs:
+  #     - targets: ["host.docker.internal:8080"]
